Fix images dissapearing on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -77,10 +77,8 @@ ul.share-buttons .sr-only {
 @media (max-width: 575px) {
   .banner,
   .section {
-    flex-direction: column;
-  }
-  .section__image {
-    display: none;
+    flex-direction: column !important;
+    text-align: center;
   }
 }
 
@@ -106,7 +104,7 @@ ul.share-buttons .sr-only {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin-bottom: 64px;
+  flex-direction: row;
   &__image {
     max-width: 250px;
   }
@@ -116,6 +114,10 @@ ul.share-buttons .sr-only {
   &__right {
     margin: 32px;
   }
+}
+
+.reverse {
+  flex-direction: row-reverse;
 }
 
 .contact {
